# opai

./: .gitignore  CMakeLists.txt  LICENSE.txt  OPAI.cbp  README.txt  basic_types.h  bot.cpp  bot.h  compile.linux.32.sh  compile.linux.64.sh  compile.linux.x86-32.sh  compile.linux.x86-64.sh  compile.windows.32.sh  compile.windows.x86-32.sh  config.h  field.cpp  field.h  main.cpp  minimax.cpp  minimax.h  mtdf.cpp  mtdf.h  player.h  position_estimate.cpp  position_estimate.h  time.h  todo.txt  trajectories.h  trajectory.h  uct.cpp  uct.h  zobrist.h
